--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,11 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
@@ -12,6 +17,18 @@
   <div class="field">
     <%= f.label :profile %><br />
     <%= f.text_area :profile, autofocus: true %>
+  </div>
+
+  <div class="circle-avatar">
+    <img id="avatar_img_prev" src="#" class='hidden' />
+    <% if current_user.persisted? && current_user.avatar? %>
+      <%= image_tag current_user.avatar.to_s %>
+      <label><%= f.check_box :remove_avatar %> 画像を削除</label>
+    <% else %>
+      <%= image_tag 'no_avatar.png' %>
+      <%= f.hidden_field :avatar_cache %>
+    <% end %>
+      <%= f.file_field :avatar, id: 'post_img' %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -30,11 +47,6 @@
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
   <div class="actions">
