--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,6 +5,9 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
+            <%= link_to 'マイページ', mypage_path %>
+          </li>
+          <li class="nav-item active">
             <%= link_to 'プロフィール変更', edit_user_registration_path %>
           </li>
           <li class="nav-item active">
