--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,10 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to 'マイページ', mypage_path %>
+            <%= link_to '旅行者一覧', users_path %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to 'マイページ', user_path(current_user.id) %>
           </li>
           <li class="nav-item active">
             <%= link_to 'プロフィール変更', edit_user_registration_path %>
@@ -15,8 +18,9 @@
           </li>
         <% else %>
           <li class="nav-item active">
-            <%= link_to 'サインアップ', new_user_registration_path %>
+            <%= link_to '新規登録', new_user_registration_path %>
           </li>
+          <li class="nav-item active">
             <%= link_to 'ログイン', new_user_session_path %>
           </li>
         <% end %>
